tests/valid/variables/assign.rs
/*
executionExitCode: 2
*/

main(): i32 {
    a: i64;
    a = 2;
    return a;
}