tests/invalid/variables/bad_decl.rs
/*
compilationExitCode: 2
*/

main(): i32 {
    a: i64s = 1;
    return a;
}